testdata/golden/sema/invalid/directives/not_directive_module/main.fmt
// Test: directive namespace module lacks pragma directive
// Expected: SEM3120 error
import helper;

/// helper:
/// helper.do_something();

fn foo() -> int { return 1; }
